# QontrolPanel

./: CMakeLists.txt  QuickSoundSwitcher.pro  README.md  main.cpp
.github/: BUILDING.md  TRANSLATIONS.md
.github/workflows/: build.yml  compile_translations.yml  release.yml
AudioManager/: AudioManager.cpp
MediaFlyout/: MediaFlyout.cpp  MediaFlyout.h  MediaFlyout.ui
MediaSessionWorker/: MediaSession.h  MediaSessionWorker.cpp  MediaSessionWorker.h
Panel/: Panel.cpp  Panel.h
QuickSoundSwitcher/: QuickSoundSwitcher.cpp  QuickSoundSwitcher.h
Resources/: resources.qrc
Resources/icons/: icons.qrc
Resources/qml/: MediaFlyout.qml  Panel.qml
Resources/videos/: videos.qrc
SettingsPage/: SettingsPage.cpp  SettingsPage.ui
SoundOverlay/: SoundOverlay.cpp
Utils/: Utils.cpp  Utils.h
i18n/: QontrolPanel_de.ts  QontrolPanel_en.ts  QontrolPanel_fr.ts  QontrolPanel_it.ts  QontrolPanel_ko.ts  QontrolPanel_ru.ts  QontrolPanel_zh_CN.ts  QuickSoundSwitcher_de.ts  QuickSoundSwitcher_en.ts  QuickSoundSwitcher_fr.ts  QuickSoundSwitcher_it.ts  QuickSoundSwitcher_ko.ts  QuickSoundSwitcher_ru.ts  QuickSoundSwitcher_zh_CN.ts
i18n/compiled/: QontrolPanel_en.qm  QontrolPanel_fr.qm  QontrolPanel_it.qm  QontrolPanel_ko.qm  QontrolPanel_ru.qm  QontrolPanel_zh_CN.qm  QuickSoundSwitcher_en.qm  QuickSoundSwitcher_fr.qm  QuickSoundSwitcher_it.qm  QuickSoundSwitcher_ko.qm  QuickSoundSwitcher_ru.qm  QuickSoundSwitcher_zh_CN.qm  translation_progress.json
include/: audiobridge.h  audiomanager.h  bluetoothbatterymonitor.h  headsetcontrolbridge.h  headsetcontrolmanager.h  headsetcontrolmonitor.h  logmanager.h  mediasessionmanager.h  monitormanager.h  monitormanagerimpl.h  qontrolpanel.h  quicksoundswitcher.h  shortcutmanager.h  soundpanelbridge.h  updater.h  windowfocusmanager.h
qml/: ApplicationsListView.qml  Card.qml  ChatMixNotification.qml  ConfirmPowerActionDialog.qml  DevicesListView.qml  DonatePopup.qml  ExecutableRenameContextMenu.qml  ExecutableRenameDialog.qml  IntroWindow.qml  KeepAlive.qml  LoggingConfDialog.qml  Main.qml  MediaFlyoutContent.qml  PanelFooter.qml  PanelSpacer.qml  PowerConfirmationWindow.qml  PowerMenu.qml  SettingsWindow.qml  SoundPanel.qml  SystemTray.qml
qml/Common/: ApplicationsListView.qml  Card.qml  CustomScrollView.qml  DevicesListView.qml  LabeledSwitch.qml  NFButton.qml  ProgressSlider.qml
qml/Debug/: DebugRectangle.qml
qml/SettingsPane/: AppearancePane.qml  CommAppsPane.qml  ComponentsPane.qml  ConsolePane.qml  DebugPane.qml  DeviceRenamingPane.qml  GeneralPane.qml  HeadsetControlPane.qml  LanguagePane.qml  ShortcutsPane.qml
qml/Singletons/: Constants.qml  Context.qml  LogBridge.qml  UserSettings.qml
resources/icons/: icons.qrc
src/: audiobridge.cpp  audiomanager.cpp  bluetoothbatterymonitor.cpp  headsetcontrolbridge.cpp  headsetcontrolmanager.cpp  headsetcontrolmonitor.cpp  logmanager.cpp  main.cpp  mediasessionmanager.cpp  monitormanager.cpp  monitormanagerimpl.cpp  qontrolpanel.cpp  quicksoundswitcher.cpp  shortcutmanager.cpp  soundpanelbridge.cpp  updater.cpp  version.h.in  windowfocusmanager.cpp
tools/: analyze_translations.py  installer.iss
